--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,13 @@
 // Specific CSS for your home-page
+.row {
+  margin-top: 30px;
+  h3 {
+    padding-top: 0px;
+    margin-top: 0px;
+  }
+}
+
+body {
+  background: #274250;
+  color: white;
+}
