--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,7 +1,7 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
+$red: #D1564E;
 $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
