--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,14 +1,20 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-offset-2 col-xs-4">
-        <ol class="list-inline" id="breadcrumb">
-          <%= render_breadcrumbs :tag => :li, :separator => "<i class='fa fa-long-arrow-alt-right' aria-hidden='true' ></i>" %>
-        </ol>
+  <div id="buttons" class="row">
+    <div class="col-xs-6 col-sm-4 col-sm-offset-2 text-left movies-fwbw">
+      <h3>
+        <%= link_to "<< Previous", @movies.next(@movie) %>
+      </h3>
     </div>
+    <div class="col-xs-6 col-sm-4 text-right movies-fwbw">
+      <h3>
+        <%= link_to 'Next >>', @movies.previous(@movie) %>
+      </h3>
   </div>
+</div>
   <h1 class="col-sm-offset-2 tex"><%= @movie.title %></h1>
   <div class="row">
-    <div class="col-xs-12 col-sm-4 col-sm-offset-2">
+    <div class="col-xs-12 col-sm-5 col-sm-offset-2">
       <h3>Cast & Crew</h3>
       <p>
         <strong>Release:</strong>  
@@ -53,6 +59,8 @@
       
       <p>
         <%= link_to "Delete", movies_destroy_path(@movie), class: "btn btn-danger btn-lg", style: "margin-top: 20px; background: #D1564E" %>
+      </p>
+      <p>
       </p>
     </div>
   </div>
